<resources>
    <string name="app_name">Flux</string>
    <string name="endpoint_url">https://flux.api.internal.cornelldti.org/v1/</string>

    <string name="all">All</string>
    <string name="north">North</string>
    <string name="west">West</string>
    <string name="central">Central</string>

    <string name="Libe">libe</string>
    <string name="Jenny">cafejennie</string>
    <string name="Okenshields">okies</string>
    <string name="Becker">becker</string>
    <string name="West104">west104</string>
    <string name="Bethe">bethe</string>
    <string name="RPME">rpcc</string>
    <string name="Risley">risley</string>
    <string name="Cook">cook</string>
    <string name="Keeton">keeton</string>

    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>

    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>

    <string name="Su">Su</string>
    <string name="M">M</string>
    <string name="T">T</string>
    <string name="W">W</string>
    <string name="Th">Th</string>
    <string name="F">F</string>
    <string name="S">Sa</string>

    <string name="menu">Menu</string>
    <string name="breakfast">Breakfast</string>
    <string name="brunch">Brunch</string>
    <string name="lunch">Lunch</string>
    <string name="lite_lunch">Lite Lunch</string>
    <string name="dinner">Dinner</string>

    <!-- Content descriptions corresponding to the different pills -->
    <string name="first_pill_content">First pill corresponding to no spots</string>
    <string name="second_pill_content">Second pill corresponding to few spots</string>
    <string name="third_pill_content">Third pill corresponding to some spots</string>
    <string name="fourth_pill_content">Fourth pill corresponding to lots of spots</string>

    <string name="search_hint">Search</string>
    <string name="todaysHours">Today\'s Hours</string>
    <string name="searchTitle">Search</string>

    <!-- facilityClass status names -->
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="very_empty">Not Busy</string>
    <string name="pretty_empty">Somewhat Busy</string>
    <string name="pretty_crowded">Pretty Busy</string>
    <string name="very_crowded">Very Busy</string>
    <string name="unknown">Unknown</string>

    <!-- content descriptions -->
    <string name="back_button_desc">Back button to return list of locations</string>

    <!-- facility info page strings -->
    <string name="accuracy">Is this accurate?</string>
    <string name="last_updated">Last Updated</string>
    <string name="now">Availability</string>
    <string name="popular">Popular Times</string>
    <string name="availability_icon">Accessibility icon representing amount of people.</string>
    <string name="availability_gt">&gt; %d</string>
    <string name="availability_lt">&lt; %d</string>
    <string name="availability_range">%d - %d</string>
    <string name="max_capacity">Max Capacity: %d</string>
    <string name="menu_default_text">No menu items available.</string>
    <string name="no_operating_hours">No operating hours available.</string>

    <!-- facilities page strings -->
    <string name="facility_name">Facility Name</string>
    <string name="facility_wait_time">0 min. wait</string>
    <string name="covid_policy">Face Coverings Required at all dining halls.</string>
    <string name="covid_policy_button">View Dining Policies</string>

    <!-- failure page strings -->
    <string name="sorry_failure">Sorry, there\'s an error loading the data.</string>
    <string name="check_internet">Please check your internet connection.</string>

    <!--  facility info page feedback strings  -->
    <string name="accuracy_feedback">Accuracy Feedback</string>
    <string name="question_accurate">Is this information accurate?</string>
    <string name="question_crowdedness">How crowded do you think North Star at Appel is right now?</string>
    <string name="question_waittime">How many minutes did you wait in line?</string>
    <string name="question_textarea">Is there anything else you would like to share?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="button_submit">Submit</string>
    <string name="button_close">Close Button</string>
    <string name="icon_message">Message Icon</string>
    <string name="icon_thumb">Thumb Icon</string>
    <string name="icon_star">Star Icon</string>
    <string name="message_thank">Thank You!</string>
    <string name="message_help">This helps us fix any discrepancies and create a better experience for you.</string>

    <!--  facilities page feedback strings  -->
    <string name="main_page_feedback">Have Feedback? We\'d love to hear from you!</string>
    <string name="main_page_feedback_button">Leave Feedback</string>
    <string name="flux_feedback">Flux Feedback</string>
    <string name="question_recommend">1. How willing are you to recommend Flux to your friends? (1–5)</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="question_features">2. Which features do you find useful?</string>
    <string name="popular_times">Popular Times</string>
    <string name="availability_breakdown">Availability Breakdown</string>
    <string name="dining_areas">Dining Areas</string>
    <string name="question_overall">3. How do you like Flux overall?</string>
    <string name="not_like">I don\'t like it.</string>
    <string name="very_like">Very much</string>
    <string name="question_suggestion">4. Do you have any other suggestions?</string>
    <string name="placeholder_suggestion">Please enter here. We really appreciate your feedback!</string>
    <string name="message_suggestion">Your feedback would help us improve.</string>
    <string name="back_home">Back to Home</string>


</resources>
