<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_close_margin"
        android:layout_marginEnd="@dimen/dialog_close_margin"
        android:contentDescription="@string/button_close"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_title_margin"
        android:text="@string/flux_feedback"
        android:textColor="@color/feedback_title"
        android:textSize="@dimen/dialog_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_close" />

    <TextView
        android:id="@+id/question_dialog"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/dialog_text_height_alt"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/line_spacing_extra"
        android:paddingLeft="@dimen/dialog_text_padding"
        android:paddingRight="@dimen/dialog_text_padding"
        android:text="@string/question_features"
        android:textColor="@color/feedback_question"
        android:textSize="@dimen/dialog_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_dialog" />

    <LinearLayout
        android:id="@+id/features_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_dialog">

        <CheckBox
            android:id="@+id/popular_times"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_checkbox"
            android:text="@string/popular_times"
            android:textColor="@color/radio_button_grey" />

        <CheckBox
            android:id="@+id/availability_breakdown"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_checkbox"
            android:text="@string/availability_breakdown"
            android:textColor="@color/radio_button_grey" />

        <CheckBox
            android:id="@+id/dining_area"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_checkbox"
            android:text="@string/dining_areas"
            android:textColor="@color/radio_button_grey" />

        <CheckBox
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_checkbox"
            android:text="@string/menu"
            android:textColor="@color/radio_button_grey" />

    </LinearLayout>

    <Button
        android:id="@+id/button_previous"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_button_margin"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/button_previous"
        android:text="@string/button_previous"
        android:textAllCaps="false"
        android:textColor="@color/feedback_button"
        android:textSize="@dimen/dialog_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/features_checkbox" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/dialog_button_margin"
        android:backgroundTint="@color/feedback_button"
        android:text="@string/button_next"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/dialog_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/features_checkbox" />


</androidx.constraintlayout.widget.ConstraintLayout>