<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_close_margin"
        android:layout_marginEnd="@dimen/dialog_close_margin"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/button_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy_feedback"
        android:textSize="@dimen/dialog_title"
        android:textColor="@color/feedback_title"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/button_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/question_dialog"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_text_height"
        android:text="@string/question_accurate"
        android:textSize="@dimen/dialog_text"
        android:textColor="@color/feedback_question"
        android:lineSpacingExtra="@dimen/line_spacing_extra"
        android:layout_marginTop="5dp"
        android:paddingLeft="@dimen/dialog_text_padding"
        android:paddingRight="@dimen/dialog_text_padding"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/title_dialog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <RadioGroup
        android:id="@+id/answer_dialog_radio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_answer_height"
        android:orientation="vertical"
        android:paddingStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/question_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/answer_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>

        <RadioButton
            android:id="@+id/answer_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_next"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:textSize="@dimen/dialog_button"
        android:textAllCaps="false"
        android:backgroundTint="@color/feedback_button"
        android:layout_marginEnd="@dimen/dialog_button_margin"
        app:layout_constraintTop_toBottomOf="@+id/answer_dialog_radio"
        app:layout_constraintRight_toRightOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>