<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_close_margin"
        android:layout_marginEnd="@dimen/dialog_close_margin"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/button_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy_feedback"
        android:textSize="@dimen/dialog_title"
        android:textColor="@color/feedback_title"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/button_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/question_dialog"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_text_height"
        android:text="@string/question_crowdedness"
        android:textSize="@dimen/dialog_text"
        android:textColor="@color/feedback_question"
        android:lineSpacingExtra="@dimen/line_spacing_extra"
        android:layout_marginTop="5dp"
        android:paddingLeft="@dimen/dialog_text_padding"
        android:paddingRight="@dimen/dialog_text_padding"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/title_dialog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_very_empty"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/very_empty"
        app:layout_constraintTop_toBottomOf="@id/question_dialog"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_very_busy"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/very_crowded"
        app:layout_constraintTop_toBottomOf="@id/question_dialog"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/answer_dialog_bar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_very_busy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/first_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_box_margin"
            android:layout_marginRight="@dimen/dialog_box_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/first_pill_content"
            android:src="@drawable/rounded_box_dialog"/>

        <ImageView
            android:id="@+id/second_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_box_margin"
            android:layout_marginRight="@dimen/dialog_box_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/second_pill_content"
            android:src="@drawable/rounded_box_dialog"/>


        <ImageView
            android:id="@+id/third_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_box_margin"
            android:layout_marginRight="@dimen/dialog_box_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/third_pill_content"
            android:src="@drawable/rounded_box_dialog"/>

        <ImageView
            android:id="@+id/fourth_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_box_margin"
            android:layout_marginRight="@dimen/dialog_box_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/fourth_pill_content"
            android:src="@drawable/rounded_box_dialog"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/answer_dialog_radio"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/answer_dialog_bar"
        app:layout_constraintLeft_toLeftOf="parent">

        <RadioButton
            android:id="@+id/first_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_radio_margin"
            android:layout_marginRight="@dimen/dialog_radio_margin"/>

        <RadioButton
            android:id="@+id/second_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_radio_margin"
            android:layout_marginRight="@dimen/dialog_radio_margin"/>

        <RadioButton
            android:id="@+id/third_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_radio_margin"
            android:layout_marginRight="@dimen/dialog_radio_margin"/>

        <RadioButton
            android:id="@+id/fourth_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_radio_margin"
            android:layout_marginRight="@dimen/dialog_radio_margin"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_previous"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_button_margin"
        android:layout_marginTop="25dp"
        android:text="@string/button_previous"
        android:textSize="@dimen/dialog_button"
        android:textAllCaps="false"
        android:textColor="@color/feedback_button"
        android:background="@drawable/button_previous"
        app:layout_constraintTop_toBottomOf="@+id/answer_dialog_radio"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_button_margin"
        android:layout_marginTop="25dp"
        android:text="@string/button_next"
        android:textSize="@dimen/dialog_button"
        android:textAllCaps="false"
        android:backgroundTint="@color/feedback_button"
        app:layout_constraintTop_toBottomOf="@+id/answer_dialog_radio"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>